# Illegal-review

./: .gitignore  01-视频违规审核Agent-规则加AI双引擎架构方案.md  05-分析引擎层架构方案.md  06-预处理特征输入模块设计.md  07-文本分析引擎架构方案.md  README.md  main.py  pyproject.toml
architecture/: 02-专业级预处理层分析文档.md  03-输入层设计-修订版.md  03-输入层设计.md  09-音频分析引擎设计方案.md  12-支撑系统设计方案.md
config/: sensitive_words.txt
docs/: 03-输入层模块设计文档.md  04-解码提取层设计文档.md  08-图像识别引擎设计方案.md  10-规则引擎设计方案.md  11-融合决策层设计方案.md  13-输入层设计方案.md
docs/superpowers/plans/: 2026-06-02-input-layer-implementation.md  2026-06-02-preprocessing-layer-implementation.md  2026-06-02-text-analysis-engine-implementation.md  2026-06-03-parameter-alignment.md
docs/superpowers/specs/: 2026-06-02-input-layer-design.md  2026-06-02-preprocessing-layer-design.md  2026-06-02-text-analysis-engine-design.md  (+1 more)
note/: model_selection_recommendation.md
scripts/: integration_test.py  verify_text_analysis.py
src/illegal_review/: __init__.py  cli.py  data_models.py
tests/: __init__.py
tests/input_layer/: __init__.py  test_format_checker.py  test_kafka_client.py  test_live_stream.py  test_metadata.py  test_quota_manager.py  test_rate_limiter.py  test_router.py  test_service.py  test_temp_manager.py  test_upload_handler.py  test_url_fetcher.py
tests/preprocessing_layer/: test_audio_extract_stage.py  test_context.py  test_data_models.py  test_decode_stage.py  test_exceptions.py  test_ffmpeg_helper.py  test_frame_io.py  test_frame_sample_stage.py  test_ocr_stage.py  test_pipeline.py  test_service.py  test_speech_stage.py  test_stage.py  test_temp_cleaner.py
(+72 files in other folders)
